Update organization here or there

--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -47,11 +47,11 @@
     <div class="collapse navbar-collapse" id="mainNavBar">
         <ul class="nav navbar-nav">
             <li><a href="#demo" data-toggle="tab">Demo</a></li>
-            <li><a href="https://github.com/alexarchambault/coursier/blob/master/USAGE.md">Usage</a></li>
+            <li><a href="https://github.com/coursier/coursier/blob/master/USAGE.md">Usage</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/alexarchambault/coursier">Github</a></li>
+            <li><a href="https://github.com/coursier/coursier">Github</a></li>
         </ul>
     </div>
 
@@ -64,7 +64,7 @@
         <div class="jumbotron">
             <h1>Coursier</h1>
             <p>Pure Scala Artifact Fetching</p>
-            <p><a href="https://github.com/alexarchambault/coursier">Project Page</a></p>
+            <p><a href="https://github.com/coursier/coursier">Project Page</a></p>
         </div>
     </div>
 
