Address more warnings

--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -126,7 +126,7 @@ $('.nav-tabs a').on('shown.bs.tab', function (e) {
 </script>
 
 <script>
-  coursier.web.Main().main();
+  CoursierWeb.main();
 </script>
 
 </body>
